# mkb

./: .env.sample  Cargo.toml  LICENSE.md  README.md  diesel.toml  docker-compose.yml  todo.org
.github/workflows/: rust-ci.yml
migrations/2025-09-30-004713-0000_users/: up.sql
migrations/2025-09-30-005329-0000_killmails/: down.sql  up.sql
migrations/2025-09-30-005334-0000_entities/: down.sql  up.sql
migrations/2025-09-30-005342-0000_killmails_x_entities/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  models.rs  schema.rs
src/esi/: mod.rs  processor.rs  scheduler.rs
src/http/: handlers.rs  state.rs
src/storage/: handlers.rs  mod.rs  models.rs  schema.rs
