[package]
name = "mkb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
chrono = "0.4.42"
diesel = { version = "2.3.2", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.3.0", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
jwt = "0.16.0"
r2d2 = "0.8.10"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
